add generic oauth connect + callback

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 PORT=3000
 DB_PATH=./data/dev.sqlite3
 TELEGRAM_BOT_TOKEN=
+APP_BASE_URL=http://localhost:3000
+APP_SECRET=
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
