feat: add Spotify OAuth + proxy provider

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ GOOGLE_OAUTH_CLIENT_SECRET=
 
 GITHUB_OAUTH_CLIENT_ID=
 GITHUB_OAUTH_CLIENT_SECRET=
+
+SPOTIFY_OAUTH_CLIENT_ID=
+SPOTIFY_OAUTH_CLIENT_SECRET=
